fix: align navigation icons

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,1 +1,5 @@
 $tablet: 768px;
+
+@mixin free-space {
+  padding: 0 10vw 0;
+}
