--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -25,15 +25,14 @@ body {
 }
 
 .main {
-  background-color: rgba(0,0,0,0.85);
-  height: 100%;
-  padding: 0 10vw 0;
   align-items: center;
+  background-color: rgba(0,0,0,0.85);
   display: flex;
   flex-direction: column;
   height: 100%;
   justify-content: center;
   position: relative;
+  @include free-space;
 }
 
 .navigation {
@@ -43,19 +42,31 @@ body {
   justify-content: space-between;
   margin-top: 25px;
   position: absolute;
-  padding: 0 10vw 0;
   top: 0;
   width: 100%;
+  @include free-space;
 
   &__item {
+    height: 100%;
     width: 50%;
     &--left {
-      height: 100%;
+      @media (min-width: $tablet) {
+        width: unset;
+      }
     }
     &--right {
-      text-align: right;
+      align-items: center;
+      display: flex;
+      justify-content: flex-end;
+      font-size: 1.5rem;
+      @media (min-width: $tablet) {
+        padding: 5px;
+        width: 100%;
+      }
     }
-    &--search, &--menu {padding: 5px;}
+    &--search, &--menu {
+      padding: 5px;
+    }
     &--search {
       display: none;
       @media screen and (min-width: $tablet) {
